# contracta

./: README.md  pyproject.toml
.github/workflows/: ci.yml
contracta/: hooks.py  modules.txt
contracta/contracta/doctype/boq/: boq.json  boq.py
contracta/contracta/doctype/business_clause/: business_clause.json  business_clause.py
contracta/contracta/doctype/clearance/: clearance.js  clearance.json  clearance.py  test_clearance.py
contracta/contracta/doctype/contractors_costs/: contractors_costs.json  contractors_costs.py
contracta/contracta/doctype/costing_note/: costing_note.js  costing_note.json  costing_note.py  test_costing_note.py
contracta/contracta/doctype/costtype/: costtype.json  costtype.py
contracta/contracta/doctype/custom_quotation/: custom_quotation.js  custom_quotation.json  custom_quotation.py  test_custom_quotation.py
contracta/contracta/doctype/equipment_costs/: equipment_costs.json  equipment_costs.py
contracta/contracta/doctype/expense_schedule/: expense_schedule.json  expense_schedule.py
contracta/contracta/doctype/labor_costs/: labor_costs.json  labor_costs.py
contracta/contracta/doctype/materials_costs/: materials_costs.json  materials_costs.py
contracta/contracta/doctype/tender/: tender.js  tender.json  tender.py  test_tender.py
contracta/contracta/doctype/totals/: totals.json  totals.py
contracta/public/js/: quotation.js
